--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
