--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "joi": "^17.13.1",
-    "mongoose": "^8.4.3"
+    "mongoose": "^8.4.3",
+    "nodemon": "^3.1.3"
   }
 }
