--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "react": "^18.2.0",
