--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "mongoose": "^8.4.3",
     "nodemon": "^3.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.5"
   }
 }
